--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -88,6 +88,8 @@ cmt_cpp_to_c=false
 cmt_star_cont=false
 cmt_multi_check_last=true
 cmt_insert_before_preproc=false
+cmt_reflow_mode=1
+cmt_star_cont=true
 pp_indent_at_level=false
 pp_region_indent_code=false
 pp_if_indent_code=false
