applies changes to make file and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Makefile
 CMakeFiles/*
 CMakeCache.txt
 cmake_install.cmake
+sx-parser-sq-machine.c
+sx-parser-dq-machine.c
+sx-parser-plain-machine.c
+
