--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(
 	/usr/include/sexpr
 )
 
-set(CMAKE_C_FLAGS "-std=gnu99 -Wall -Wextra -pedantic -g -ggdb -DTEST -fPIC")
+set(CMAKE_C_FLAGS "-std=gnu99 -Wall -Wextra -pedantic -g -ggdb -DTEST  -fPIC")
 set(CMAKE_SHARED_LIBRARY_C_FLAGS "-Wl,--no-undefined")
 #-Werror -fprofile-arcs -ftest-coverage
 
@@ -21,20 +21,22 @@ RAGEL_TARGET(sx-parser-dq-machine sx-parser-dq-machine.rl
 RAGEL_TARGET(sx-parser-plain-machine sx-parser-plain-machine.rl
   ${CMAKE_CURRENT_BINARY_DIR}/sx-parser-plain-machine.c)
 
+include_directories(${libnih_SOURCE_DIR})
+
 add_library(nih SHARED
-	blobtree.c
-	sx-pool.c
-	sx-strgen.c
-	sx-parser.c
-	sx-stack-tests.c
-    ${RAGEL_sx-parser-sq-machine_OUTPUTS}
-    ${RAGEL_sx-parser-dq-machine_OUTPUTS}
-    ${RAGEL_sx-parser-plain-machine_OUTPUTS}
+  blobtree.c
+  sx-pool.c
+  sx-strgen.c
+  sx-parser.c
+  ${libnih_SOURCE_DIR}/tests/sx-stack-tests.c
+  ${RAGEL_sx-parser-sq-machine_OUTPUTS}
+  ${RAGEL_sx-parser-dq-machine_OUTPUTS}
+  ${RAGEL_sx-parser-plain-machine_OUTPUTS}
 )
 
 target_link_libraries(nih sexp m)
 
 add_custom_target(chop
-	/repos/butcher/butcher -v libnih.so $(BFLAGS)
-	DEPENDS nih
+  /repos/butcher/butcher -v libnih.so $(BFLAGS)
+  DEPENDS nih
 )
