adds a writeonly trie implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(nih SHARED
   ${RAGEL_sx-parser-dq-machine_OUTPUTS}
   ${RAGEL_sx-parser-plain-machine_OUTPUTS}
   sr.c
+  trie.c
 )
 
 target_link_libraries(nih sexp m)
