--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(
 	/usr/include/sexpr
 )
 
-set(CMAKE_C_FLAGS "-std=gnu99 -Wall -Wextra -pedantic -g -ggdb -DTEST -DNPOOL -fPIC")
+set(CMAKE_C_FLAGS "-std=gnu99 -Wall -Wextra -pedantic -g -ggdb -DTEST -DLUA -DNPOOL -fPIC -O0")
 set(CMAKE_SHARED_LIBRARY_C_FLAGS "-Wl,--no-undefined")
 #-Werror -fprofile-arcs -ftest-coverage
 
@@ -32,11 +32,14 @@ add_library(nih SHARED
   ${RAGEL_sx-parser-sq-machine_OUTPUTS}
   ${RAGEL_sx-parser-dq-machine_OUTPUTS}
   ${RAGEL_sx-parser-plain-machine_OUTPUTS}
+  memory.c
   sr.c
   trie.c
+  table.c
+  lua/init.c
 )
 
-target_link_libraries(nih sexp m)
+target_link_libraries(nih sexp m lua)
 
 add_custom_target(chop
   /repos/butcher/butcher -v libnih.so $(BFLAGS)
