adds new version of code style spec

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -2,7 +2,7 @@ indent_align_string=true
 indent_braces=false
 indent_braces_no_func=false
 indent_brace_parent=false
-indent_namespace=false
+indent_namespace=true
 indent_extern=true
 indent_class=true
 indent_class_colon=true
@@ -77,7 +77,7 @@ mod_sort_using=false
 mod_sort_include=false
 mod_move_case_break=false
 mod_remove_empty_return=false
-cmt_indent_multi=true
+cmt_indent_multi=false
 cmt_c_group=false
 cmt_c_nl_start=false
 cmt_c_nl_end=false
@@ -115,8 +115,8 @@ align_func_proto_gap=0
 nl_start_of_file_min=0
 nl_end_of_file_min=1
 nl_func_var_def_blk=1
-code_width=100
-cmt_width=100
+code_width=120
+cmt_width=120
 pp_indent_count=0
 pp_space_count=1
 newlines=auto
@@ -212,3 +212,6 @@ nl_fdef_brace=force
 nl_return_expr=remove
 pp_indent=add
 pp_space=add
+align_pp_define_gap=1
+align_pp_define_span=10
+align_var_struct_span=10
